@@ -1,3 +1,8 @@
+2004-10-09  Bruno Haible  <bruno@clisp.org>
+
+	* clos.lisp (slot-unbound): Restore the error message that was thrown
+	away on 2003-05-01.
+
 2004-10-07  Bruno Haible  <bruno@clisp.org>
 
 	* debug.d (read_form): Don't use ls_avail_p to test whether the
